--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@fortawesome/free-brands-svg-icons": "^5.12.0",
         "@fortawesome/free-solid-svg-icons": "^5.12.0",
         "@fortawesome/react-fontawesome": "^0.1.8",
+        "jquery": "^3.4.1",
         "react-router-dom": "^5.1.2"
     }
 }
