--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,19 @@
         "ocramius/proxy-manager": "^2.2",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/apache-pack": "^1.0",
+        "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
-        "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
         "symfony/http-client": "5.0.*",
+        "symfony/mailer": "5.0.*",
+        "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "^1.0",
         "symfony/routing": "5.0.*",
         "symfony/security-bundle": "5.0.*",
         "symfony/serializer": "5.0.*",
+        "symfony/translation": "5.0.*",
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "5.0.*",
         "symfony/var-dumper": "5.0.*",
@@ -30,6 +33,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "fzaninotto/faker": "^1.9",
+        "symfony/dotenv": "5.0.*",
         "symfony/maker-bundle": "^1.14",
         "symfony/profiler-pack": "^1.0"
     },
