--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
         "jquery": "^3.5.0",
+        "mini-css-extract-plugin": "^0.9.0",
         "react-router-dom": "^5.1.2"
     },
     "proxy": "https://127.0.0.1:8000"
