MC-4 Setup Initial theme Add webpack.config Add atomic design

--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
         "axios": "^0.19.2",
         "babel-loader": "^8.1.0",
         "core-js": "^3.6.5",
+        "html-webpack-plugin": "^4.2.0",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "regenerator-runtime": "^0.13.5",
-        "webpack": "^4.42.1",
+        "webpack": "^4.43.0",
+        "webpack-dev-server": "^3.10.3",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
     "private": true,
     "scripts": {
+        "start": "webpack-dev-server --open",
+        "build-js": "webpack",
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
