--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/mailer": "5.0.*",
         "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "^1.0",
+        "symfony/property-access": "5.0.*",
         "symfony/property-info": "5.0.*",
         "symfony/routing": "5.0.*",
         "symfony/security-bundle": "5.0.*",
