setted up initial tables from the dataset (dataset definition is not done yet).

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,14 +2,20 @@ security:
     encoders:
         App\Entity\User:
             algorithm: auto
+        App\Entity\Signup:
+            algorithm: auto
+
+
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
-                class: App\Entity\User
+                class: App\Entity\Signup
                 property: email
+        # used to reload user from session & other features (e.g. switch_user)
+        # used to reload user from session & other features (e.g. switch_user)
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
