--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "fzaninotto/faker": "^1.9",
+        "squizlabs/php_codesniffer": "^3.5",
         "symfony/dotenv": "5.0.*",
         "symfony/maker-bundle": "^1.14",
         "symfony/profiler-pack": "^1.0"
