--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
         "symfony/http-client": "5.0.*",
+        "symfony/http-foundation": "5.0.*",
         "symfony/mailer": "5.0.*",
         "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "^1.0",
