--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "sails-hook-grunt": "^4.0.0",
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^2.0.0",
-    "sails-mysql": "^1.0.1"
+    "sails-mysql": "1.0.1"
   },
   "devDependencies": {
     "eslint": "5.16.0",
