--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "keywords": [],
     "dependencies": {
         "@sailshq/lodash": "^3.10.3",
+        "express-mysql-session": "^2.1.4",
         "nodemon": "^2.0.4",
         "sails": "^1.2.4",
         "sails-hook-orm": "^2.1.1",
