--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,15 @@
-version: '2'
+version: '3.7'
 
 services:
-
+  
   sailsjs:
     build:
-      context: .
       dockerfile: Dockerfile
+      context: .
     ports:
-      - 80:1337
+      - 8080:1337
     volumes:
-      - .:/usr/src/app
-
+      - .:/usr/src/app          
   mysqlsails:
     image: mysql
     environment:
@@ -21,22 +20,22 @@ services:
     volumes:
       - mysql-data:/var/lib/mysql
 
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.9.2
-    container_name: elasticsearch
-    environment:
-      - node.name=es01
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - esdata:/usr/share/elasticsearch/data
-    ports:
-      - 9200:9200
+#  elasticsearch:
+#    image: docker.elastic.co/elasticsearch/elasticsearch:7.9.2
+#    container_name: elasticsearch
+#    environment:
+#      - node.name=es01
+#      - cluster.name=docker-cluster
+#      - bootstrap.memory_lock=true
+#      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+#    ulimits:
+#      memlock:
+#        soft: -1
+#        hard: -1
+#    volumes:
+#      - esdata:/usr/share/elasticsearch/data
+#    ports:
+#      - 9200:9200
 
 volumes:
   mysql-data:
