--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
         "nodemailer": "^6.4.13",
         "nodemon": "^2.0.4",
         "sails": "^1.2.4",
+        "sails-hook-cron": "^3.2.0",
         "sails-hook-orm": "^2.1.1",
         "sails-hook-sockets": "^2.0.0",
-        "sails-mysql": "^1.0.1"
+        "sails-mysql": "^1.0.1",
+        "stripe": "^8.120.0"
     },
     "devDependencies": {
         "eslint": "5.16.0"
